--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -705,18 +705,46 @@ La granularidad de el método de medición de tiempo es importante.
 
 \bigskip
 
-Para medir el tiempo de ejecución de un comando en consola se utiliza {\tt time(1)}. El interprete de comandos tiene su propia versión embebida, sin embargo el del sistema brinda información del uso de otros recursos del sistema, localizado en {\tt /usr/bin/time}.
+Para medir el tiempo de ejecución de un comando en consola se utiliza {\tt time(1)}.
+Aunque rudimentaria, esta simple herramienta no necesita de instrumentación de código y se encuentra disponible en cualquier distribución {\it  GNU/Linux}.
+El interprete de comandos tiene su propia versión embebida, sin embargo el del sistema brinda información del uso de otros recursos del sistema, localizado en {\tt /usr/bin/time}.
 
 \bigskip
 
-No hace falta instrumentar el código ni el binario. Siempre disponible.
+\begin{lstlisting}
+$ /usr/bin/time -v ./script.sh
+1
+        Command being timed: "./script.sh"
+        User time (seconds): 0.61
+        System time (seconds): 0.00
+        Percent of CPU this job got: 99%
+        Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.62
+        Average shared text size (kbytes): 0
+        Average unshared data size (kbytes): 0
+        Average stack size (kbytes): 0
+        Average total size (kbytes): 0
+        Maximum resident set size (kbytes): 4560
+        Average resident set size (kbytes): 0
+        Major (requiring I/O) page faults: 0
+        Minor (reclaiming a frame) page faults: 668
+        Voluntary context switches: 6
+        Involuntary context switches: 2
+        Swaps: 0
+        File system inputs: 0
+        File system outputs: 0
+        Socket messages sent: 0
+        Socket messages received: 0
+        Signals delivered: 0
+        Page size (bytes): 4096
+        Exit status: 0
+\end{lstlisting}
 
-\subsection{Interfaz al reloj del sistema}
+\subsection{Reloj del sistema}
 
 {\tt gettimeofday(3)}
 {\tt clock(3)}
 
-Por otra parte clock se comporta de manera especial al utilizar multithreading.
+Por otra parte clock() se comporta de manera especial al utilizar multithreading.
 
 Más preciso.
 
